# BF-CBOM

./: .dockerignore  .env.example  .gitignore  CITATION.cff  Dockerfile  Makefile  README.md  cli.py  docker-compose.dev.yml  docker-compose.yml  nginx.conf  prometheus.yml  pyproject.toml  requirements.txt
common/: cbom_analysis.py  cbom_filters.py  config.py  models.py  utils.py  worker.py
coordinator/: 0_Start.py  logger_config.py  redis_io.py  utils.py
coordinator/pages/: 1_Setup.py  2_Execution.py  3_Analysis.py  4_Download.py
coordinator/treesimilarity/: CMakeLists.txt
coordinator/treesimilarity/src/: json_to_bracker.py  json_to_bracket.h  main.cpp  main.py  n_way_match.cpp
docker/: Dockerfile.PyQuN  Dockerfile.base  Dockerfile.builder  Dockerfile.coordinator  Dockerfile.misc-pyqun  Dockerfile.misc-treesimilarity  Dockerfile.treesimilarity  Dockerfile.worker-cbomkit  Dockerfile.worker-cdxgen  Dockerfile.worker-cryptobomforge  Dockerfile.worker-deepseek  Dockerfile.worker-mssbomtool  Dockerfile.worker-skeleton  Dockerfile.worker-testing
docker/env/: coordinator.env.template  misc-pyqun.env.template  misc-treesimilarity.env.template  worker-cdxgen.env.template  worker-deepseek.env.template  worker-skeleton.env.template
docs/: logo.txt
init-scripts/: 01-init.sql
misc/PyQun/: Stopwatch.py  cbom_test.py  main.py
misc/cli/: __init__.py  cli.py
misc/pyqun/: Stopwatch.py  main.py
misc/treesimilartiy/: CMakeLists.txt  readme.md
misc/treesimilartiy/src/: json_to_bracker.py  main.cpp  main.py  n_way_match.cpp  n_way_match.h  python_bindings.cpp
misc/treesimilartiy/tests/: input.json  output.json
scripts/: bump_version.sh  ensure_env.ps1  ensure_env.sh  health-check.sh
src/bf_cbom/: __init__.py  cli.py  models.py  server.py  worker.py
tests/: Chat2DB_cbomkit.json  Chat2DB_cdxgen.json  Chat2DB_deepseek.json  MinerU_cbomkit.json  MinerU_cdxgen.json  MinerU_cryptobomforge.json  MinerU_deepseek.json  __init__.py  authlib_cbomkit.json  authlib_cbomkit_manuallygenerated.json  authlib_cdxgen.json  autogptq_cbomkit.json  autogptq_cbomkit_manuallygenerated.json  bisq2_cbomkit.json  bisq2_cdxgen.json  bisq_cbomkit.json  bisq_cdxgen.json  ludwig_cbomkit.json  ludwig_cbomkit_manuallygenerated.json  ludwig_cdxgen.json  sample-repos.md  sparrow_cbomkit.json  sparrow_cbomkit_manuallygenerated.json  sparrow_cdxgen.json  test_basic.py
workers/cbomkit/: entrypoint.sh  main.py
workers/cdxgen/: main.py
workers/cryptobomforge/: main.py
workers/deepseek/: main.py
workers/mssbomtool/: main.py
workers/skeleton/: main.py
workers/testing/: main.py
