[project]
name = "bf-cbom"
version = "0.1.0"
description = "Benchmarking Framework for Cryptographic Bill of Materials"
readme = "README.md"
authors = [
    { name = "SEG-UNIBE", email = "seg@unibe.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "cryptography>=41.0.0",
    "requests>=2.31.0",
    "click>=8.1.0",
    "python-multipart>=0.0.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.10.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0"
]

[project.scripts]
bf-cbom = "bf_cbom.cli:main"
bf-cbom-server = "bf_cbom.server:run"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
