[project]
name = "BF-CBOM"
version = "0.1.3"
description = "Benchmarking and comparing Cryptographic Bills of Materials (CBOM) generators. Orchestrates workers, normalizes outputs, and scores results across ecosystems."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Roman Bögli", email="mark@quantumvillage.org"},
]

requires-python = ">=3.10"
dependencies = [
    "dataclasses-json>=0.6.7",
    "openai>=1.102.0",
    "redis>=6.4.0",
    "streamlit>=1.49.0",
    "tqdm>=4.67.1",
    "websocket-client>=1.8.0",
    "typer>=0.12.5",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
    "watchdog>=6.0.0",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["common", "coordinator", "workers"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project.scripts]
BF-CBOM = "cli:app"
