[project]
name = "bf-cbom"
version = "0.1.3"
description = "Benchmarking and comparing Cryptographic Bills of Materials (CBOM) generators. Orchestrates workers, normalizes outputs, and scores results across ecosystems."
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Roman Bögli", email = "roman.boegli@unibe.ch" }]
requires-python = ">=3.12"
dependencies = [
    "dataclasses-json>=0.6.7",
    "openai>=1.102.0",
    "redis>=6.4.0",
    "streamlit>=1.49.0",
    "tqdm>=4.67.1",
    "websocket-client>=1.8.0",
    "typer>=0.12.5",
]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["common", "coordinator", "workers", "misc"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv]
package = true
dev-dependencies = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
    "watchdog>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["common*", "coordinator*", "workers*", "misc*"]
exclude = ["docker*", "tests*", "scripts*"]

[project.scripts]
bf-cbom = "misc.cli:app"

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"
